decaf-compiler/samples/lex/define.decaf.out

*** Error line 1.
#define PROCEDURE void
^
*** Unrecognized char: '#'


*** Error line 1.
#define PROCEDURE void
                  ^^^^
*** syntax error

